Aggiunta funzionalità lato sx

--- a/index.html
+++ b/index.html
@@ -10,13 +10,35 @@
    </head>
    <body>
          <div id="root" class="app-container">
+
+<!-- UTILITIES SECTION  -->
+
             <div class="utility-container border">
                <div class="utility-personal">
-
+                  <div class="utility-infos">
+                     <img src="img/avatar_io.jpg" alt="Avatar personale">
+                     <span>Nome Utente</span>
+                  </div>
+                  <div class="utility-icons">
+                     <i class="fa fa-circle-o-notch" aria-hidden="true"></i>
+                     <i class="fa fa-comment" aria-hidden="true"></i>
+                     <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                  </div>
                </div>
+
+<!-- NOTIFY SECTION  -->
+
                <div class="utility-notify h-100">
-
+                  <div class="bell">
+                     <i class="fa fa-bell-slash" aria-hidden="true"></i>
+                  </div>
+                  <div class="switch">
+                     <div>Ricevi notifiche di nuovi messaggi</div>
+                     <a href="#">Attiva notifiche dekstop</a>
+                  </div>
                </div>
+
+
                <div class="utility-search h-50">
 
                </div>
@@ -24,6 +46,7 @@
 
                </div>
             </div>
+
             <div class="chat-container border">
                <div class="chat-info">
 
