--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- UTILITIES SECTION  -->
 
-            <div class="utility-container border">
+            <div class="utility-container">
                <div class="utility-personal">
                   <div class="utility-infos">
                      <img :src="mainUser[0].avatar" alt="Avatar personale">
@@ -28,7 +28,7 @@
 
 <!-- NOTIFY SECTION  -->
 
-               <div class="utility-notify h-100">
+               <div class="utility-notify">
                   <div class="bell">
                      <i class="fa fa-bell-slash" aria-hidden="true"></i>
                   </div>
@@ -40,7 +40,7 @@
 
 <!-- SEARCH SECTION  -->
 
-               <div class="utility-search h-50">
+               <div class="utility-search">
                   <div class="searchbar">
                      <i class="fa fa-search" aria-hidden="true"></i>
                      <input type="text" name="" value="" placeholder="Cerca o inizia una nuova chat">
@@ -59,7 +59,7 @@
 
 
 <!-- CHAT SECTION  -->
-            <div class="chat-container border">
+            <div class="chat-container">
 
 <!-- INFO SECTION  -->
 
@@ -80,11 +80,17 @@
                   </div>
                </div>
 
+<!-- BOX SECTION  -->
+
                <div class="chat-box">
-
                </div>
-               <div class="chat-input">
 
+<!-- INPUT SECTION  -->
+
+               <div class="chat-input">
+                  <i class="fa fa-smile-o" aria-hidden="true"></i>
+                  <input type="text" name="" value="" placeholder="Scrivi un messaggio">
+                  <i class="fa fa-microphone" aria-hidden="true"></i>
                </div>
             </div>
          </div>
