Milestone 1 completa - Fix userObj

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <div class="utility-container">
                <div class="utility-personal">
                   <div class="utility-infos">
-                     <img :src="mainUser[0].avatar" alt="Avatar personale">
-                     <span>{{mainUser[0].name}}</span>
+                     <img :src="mainUser.avatar" alt="Avatar personale">
+                     <span>{{mainUser.name}}</span>
                   </div>
                   <div class="utility-icons">
                      <i class="fa fa-circle-o-notch" aria-hidden="true"></i>
