--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                <div class="utility-search">
                   <div class="searchbar">
                      <i class="fa fa-search" aria-hidden="true"></i>
-                     <input type="text" name="" value="" placeholder="Cerca o inizia una nuova chat">
+                     <input @input="search" v-model="actualSearch" type="text" name="" value="" placeholder="Cerca o inizia una nuova chat">
                   </div>
                </div>
 
@@ -51,7 +51,7 @@
 
                <div class="utility-contacts">
                   <ul class="my-contacts">
-                     <li @click="pickActive(index)" v-for="(contact,index) in contactsArray" :class="{active : contact.isActive}">
+                     <li @click="pickActive(index)" v-for="(contact,index) in filteredContactsArray" :class="{active : contact.isActive}">
                         <a href="#">
                            <img :src="contact.avatar" alt="Immagine Contatto">
                            <span>{{contact.name}}</span>
@@ -86,7 +86,7 @@
 <!-- BOX SECTION  -->
 
                <div class="chat-box">
-                  <ul v-if="show()" class="contact-chat">
+                  <ul v-if="show" class="contact-chat">
                      <li v-for="el in contactsArray[activeContact].chat" :class="el.status">
                         <div class="message" :class="el.status">
                            <span>{{el.msg}}</span>
