Milestone 4 completa - fix e pulizia

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
                <div class="utility-contacts">
                   <ul class="my-contacts">
-                     <li @click="pickActive(index)" v-for="(contact,index) in filteredContactsArray" :class="[{active : contact.isActive},contact.filt]">
+                     <li @click="pickActive(index)" v-for="(contact,index) in contactsArray" :class="[{active : contact.isActive},contact.filt]">
                         <a href="#">
                            <img :src="contact.avatar" alt="Immagine Contatto">
                            <span>{{contact.name}}</span>
