--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                <div class="utility-search">
                   <div class="searchbar">
                      <i class="fa fa-search" aria-hidden="true"></i>
-                     <input @input="search" @keyup.delete="cancel" v-model="actualSearch" type="text" name="" value="" placeholder="Cerca o inizia una nuova chat">
+                     <input @input="search"  v-model="actualSearch" type="text" name="" value="" placeholder="Cerca o inizia una nuova chat">
                   </div>
                </div>
 
