--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <img :src="contactsArray[activeContact].avatar" alt="Avatar personale">
                         <div class="user-info">
                            <span>{{contactsArray[activeContact].name}}</span>
-                           <div>Ultimo accesso oggi alle</div>
+                           <div>Ultimo accesso oggi alle {{contactsArray[activeContact].lastAccess}}</div>
                         </div>
                      </div>
                      <div class="chat-icons">
